<resources>
    <string name="app_name">SStorage</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="field_email">E-mail</string>
    <string name="field_password">Password</string>
    <string name="action_login">Login</string>
    <string name="message_error">Error</string>
    <string name="error_server_contact">Couldn\'t contact the server</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="message_welcome">Welcome,</string>
    <string name="message_logout">Logout</string>
    <string name="message_fallback_login">Your credentials were not accepted</string>
    <string name="message_reinstall">Couldn\'t retrieve data from Application Data, try reinstalling</string>
    <string name="message_environment">Environments</string>
    <string name="action_manage">Manage</string>
    <string name="message_movements">Movements</string>
    <string name="message_patrimonies">Patrimonies</string>
    <string name="message_uac">Access Control</string>
    <string name="message_patrimonies_description">Our platform allows you to simply register and edit items in a blink of eye.</string>
    <string name="message_environments_description">You can manage your patrimonies through environments, recovering or sending them to there.</string>
    <string name="message_movements_description">The old paper sheets to register are now handled by us, leave the SStorage makes it for you.</string>
    <string name="message_uac_description">Our automated system provides you a clear manage system to your users.</string>
    <string name="title_activity_environments">Environments</string>
    <string name="action_add_env">Add Environment</string>
    <string name="message_name_env">Environment Name</string>
    <string name="action_add">Add</string>
    <string name="couldnt_perform_action">Couldn\'t perform action</string>
    <string name="message_uc_envdata">ENVIRONMENT DATA</string>
    <string name="action_update">Update</string>
    <string name="action_clear">Clear</string>
    <string name="message_validation_error">Validation error</string>
    <string name="title_activity_patrimonies">Patrimonies</string>
    <string name="message_uc_patrimonydata">PATRIMONY DATA</string>
    <string name="title_activity_patrimony_items">Patrimony Items</string>
    <string name="title_activity_move_patitem">Move Patrimony Item</string>
    <string name="activity_patrimony_items_title">%s</string>
    <string name="message_uc_destiny_environment">DESTINY ENVIRONMENT</string>
    <string name="action_move">Move</string>
    <string name="message_must_select_environment">You must select an Environment</string>
    <string name="message_item_movedto">Patrimony Item moved to %s</string>
    <string name="message_movement_history">MOVEMENT HISTORY</string>
    <string name="message_date">Date</string>
    <string name="message_from">From</string>
    <string name="message_to">To</string>
</resources>
